fix: prevent elements from overflowing container

--- a/styles/blocks/_news.scss
+++ b/styles/blocks/_news.scss
@@ -24,7 +24,7 @@
 
   &__list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(rem(358), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(rem(320), 1fr));
     gap: rem(30);
   }
 }
